<resources>
    <string name="app_name">小神探</string>
    <string name="home_head_title">小神探</string>
    <string name="home_head_title_qdlh">青炼巡检</string>
    <string name="home_head_title_zhlh">镇海炼化</string>
    <string name="main_menu_home">首页</string>
    <string name="main_menu_communication">通信</string>
    <string name="main_menu_query">查询</string>
    <string name="main_menu_tools">工具</string>
    <string name="main_menu_system">系统</string>
    <string name="main_menu_login">登录</string>
    <string name="main_menu_logout">注销</string>
    <string name="main_menu_about">关于</string>
    <string name="main_menu_quit">退出</string>
    <string name="login_dialog_logo">MOONS\'</string>
    <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">输入账号</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_rememberMe">记住我</string>
    <string name="login_userinfo">账号密码登录</string>
    <string name="login_gesture">手势密码登录</string>
    <string name="login_othertype">其它方式登录</string>
    <string name="login_userrfid_login">工卡登录</string>
    <string name="login_scan_login">扫码登录</string>
    <string name="login_rfid_close">点击屏幕关闭</string>
    <string name="main_about_appnameXDJ">小神探巡点检客户端</string>
    <string name="main_about_appname_ZHLH">镇海炼化巡点检客户端</string>
    <string name="main_about_appnameXST">小神探</string>
    <string name="main_about_appnameQDLH">青炼巡检</string>
    <string name="main_about_appnameZHLH">镇海炼化</string>
    <string name="main_about_copyright">Copyright ©2015 上海鸣志版权所有</string>
    <string name="main_about_checkappversion">检查新版本</string>
    <string name="main_menu_home_title">我的工作任务</string>
    <string name="main_menu_home_lvMemu">路线操作</string>
    <string name="main_menu_home_lvMemu_toXX">开始</string>
    <string name="main_menu_home_lvMemu_Query">查询数据</string>
    <string name="main_menu_home_lvMemu_TempTask">临时任务</string>
    <string name="main_menu_home_Return">返回</string>
    <string name="main_menu_home_cewen">温度测量</string>
    <string name="main_menu_home_cezhen">振动测量</string>
    <string name="main_menu_home_cezs">转速测量</string>
    <string name="main_menu_home_camera">相机</string>
    <string name="main_menu_home_data_synchronization">数据同步</string>
    <string name="main_menu_home_two_ticket">两票管理</string>
    <string name="main_menu_home_overhaul">检修管理</string>
    <string name="main_menu_home_versions_info">版本信息</string>
    <string name="main_menu_home_checkversion">检查更新</string>
    <string name="main_menu_commu_receive">数据同步</string>
    <string name="main_menu_commu_receive_desc">完成数据下载、上传等操作</string>
    <string name="main_menu_commu_twobilldownload">两票下载</string>
    <string name="main_menu_commu_twobilldownload_desc">下载操作票等相关数据</string>
    <string name="main_menu_commu_appUpdate">程序更新</string>
    <string name="main_menu_commu_appUpdate_desc">客户端软件更新操作</string>
    <string name="commu_type_wireless">无线方式</string>
    <string name="commu_type_usb">USB方式</string>
    <string name="main_menu_tools_systool">系统工具</string>
    <string name="main_menu_tools_measuretool">测量工具</string>
    <string name="main_menu_about_title">关于</string>
    <string name="main_menu_tools_capture">扫一扫</string>
    <string name="main_menu_tools_capture_desc">扫描条形码、二维码信息等</string>
    <string name="capture_head_title">扫一扫</string>
    <string name="main_menu_tools_save">保存到SD卡IDTemp.txt</string>
    <string name="main_menu_tools_hand_input">手动输入自定义编码</string>
    <string name="main_menu_tools_scan_input">扫码读取自定义编码</string>
    <string name="main_menu_tools_only_sava_nfc">仅保存标牌内容</string>
    <string name="main_menu_tools_clean_save">清除文件</string>
    <string name="main_menu_tools_machinecode">标识符</string>
    <string name="main_menu_tools_readid">标牌识别工具</string>
    <string name="main_menu_tools_nfc_Des">标签内容</string>
    <string name="main_menu_tools_nfc_Title">标牌识别工具</string>
    <string name="main_menu_tools_readid_desc">读取射频卡等</string>
    <string name="main_menu_tools_Recorder">录音机</string>
    <string name="main_menu_tools_Recorder_desc">录音工具，用于临时录音</string>
    <string name="main_menu_tools_Camera">相机</string>
    <string name="main_menu_tools_Camera_desc">系统照相机，用于拍摄临时照片</string>
    <string name="main_menu_tools_GPS">GPS定位</string>
    <string name="main_menu_tools_GPS_Title">GPS定位</string>
    <string name="main_menu_tools_GPS_Satellites">状态</string>
    <string name="main_menu_tools_GPS_Longitude">经度</string>
    <string name="main_menu_tools_GPS_Latitude">纬度</string>
    <string name="main_menu_tools_GPS_DateTime">授时</string>
    <string name="main_menu_tools_GPS_Altitude">海拔</string>
    <string name="main_menu_tools_GPS_Des">位置描述</string>
    <string name="main_menu_tools_GPS_btnSaveGPS">保存GPS信息</string>
    <string name="main_menu_tools_GPS_State">状态</string>
    <string name="main_menu_tools_GPS_CheckPointDes">到位点列表</string>
    <string name="main_menu_tools_GPS_desc">GPS工具，用于定位、采集记录GPS数据</string>
    <string name="main_menu_tools_Voice">语音工具</string>
    <string name="main_menu_tools_Voice_Desc">将语音转换成文字</string>
    <string name="main_menu_tools_Voice_Title">语音工具</string>
    <string name="main_menu_tools_Media">录像</string>
    <string name="main_menu_tools_download_Desc">确定</string>
    <string name="main_menu_tools_download_btn">下载</string>
    <string name="main_menu_tools_cewen">温度测量</string>
    <string name="main_menu_tools_cewen_desc">测温工具，用于临时测量温度</string>
    <string name="main_menu_tools_cezhen">振动测量</string>
    <string name="main_menu_tools_cezhen_desc">测振工具，用于临时测量振动</string>
    <string name="main_menu_tools_cezs">转速测量</string>
    <string name="main_menu_tools_cezs_desc">测转速工具，用于临时测量转速</string>
    <string name="main_menu_tools_redo">重做</string>
    <string name="main_menu_tools_camera">相机</string>
    <string name="main_menu_tools_camera_photo">拍照</string>
    <string name="main_menu_tools_camera_video">录像</string>
    <string name="main_menu_tools_camera_select">选择</string>
    <string name="main_menu_tools_camera_cancel">取消</string>
    <string name="main_menu_tools_camera_delete">删除</string>
    <string name="main_menu_system_config">参数设置</string>
    <string name="main_menu_system_config_desc">系统参数、服务地址、巡检器标识符等设置</string>
    <string name="setting_head_title">参数设置</string>
    <string name="setting_head_title_comm">通信设置</string>
    <string name="setting_head_title_comm_xjqcd">巡检器标识符</string>
    <string name="setting_head_title_comm_webaddr">WEB服务地址(内网/WIFI)</string>
    <string name="setting_head_title_comm_wlan_webaddr">WEB服务地址(外网/3G/4G)</string>
    <string name="setting_head_title_comm_other_webaddr">WEB管线地址</string>
    <string name="setting_head_title_comm_webaddr_scanbtn">扫</string>
    <string name="setting_head_title_function">功能设置</string>
    <string name="setting_head_title_function_voice">语音提示</string>
    <string name="setting_head_title_function_inputlastresult">默认输入上次结果</string>
    <string name="setting_head_title_function_checkupdae">启动检查更新</string>
    <string name="setting_head_title_function_uploadfile">启动文件后台上传</string>
    <string name="setting_head_title_function_checkwakelock">休眠锁设置</string>
    <string name="setting_head_title_function_openwakelock">已开启休眠锁,锁屏后CPU继续运行</string>
    <string name="setting_head_title_function_closewakelock">已关闭休眠锁,锁屏后CPU停止运行</string>
    <string name="setting_head_title_function_clearcache">数据清理</string>
    <string name="setting_head_title_function_jitupload">实时上传设置</string>
    <string name="setting_head_title_function_gesture_setting">手势密码设置</string>
    <string name="setting_head_title_function_show_setting">自定义快捷操作设置</string>
    <string name="setting_head_title_function_video_setting">视频录制设置</string>
    <string name="setting_head_title_sys">系统设置</string>
    <string name="setting_head_title_sys_measuretype">设置测量模块接入的方式</string>
    <string name="setting_head_title_sys_communicationtype">通信方式</string>
    <string name="setting_head_title_sys_plantype">计划类型</string>
    <string name="setting_head_title_sys_updatetimetype">设置校准时间的方式</string>
    <string name="setting_head_title_sys_changedate">设置系统日期</string>
    <string name="setting_head_title_sys_changetime">设置系统时间</string>
    <string name="setting_head_title_sys_gps">GPS定位开启检查</string>
    <string name="setting_head_title_sys_gps_settings">GPS定位相关设置</string>
    <string name="setting_head_title_sys_historydatasaveddays_setting">历史数据保存天数</string>
    <string name="main_menu_system_aboutus">关于</string>
    <string name="main_menu_system_aboutus_desc">产品信息、版权信息、多语言等</string>
    <string name="main_menu_system_database">数据清理</string>
    <string name="seting_sys_measuretype_defaultvalue">内置</string>
    <string name="seting_sys_communicationtype_defaultvalue">无线方式</string>
    <string name="setting_function_inputlastresult_off">已关闭输入上次结果</string>
    <string name="setting_function_inputlastresult_on">已开启输入上次结果</string>
    <string name="setting_function_function_jitupload">实时上传所设置的数据</string>
    <string name="setting_function_gesture_setting">使用手势密码登录系统</string>
    <string name="setting_function_show_setting">设置主页显示哪些快捷操作功能</string>
    <string name="setting_function_video_setting">以高清晰度还是低清晰度录制视频</string>
    <string name="setting_function_gps_setting">GPS定位相关设置</string>
    <string name="setting_function_gpscorrect">GPS校准</string>
    <string name="setting_function_webcorrect">WEB校准</string>
    <string name="setting_function_nocorrect">不校准</string>
    <string name="setting_function_commucorrect">通信校准</string>
    <string name="main_menu_system_hisdatasaved_unit">%s天</string>
    <string name="main_menu_system_gpssetting_mode_highprecision">高精度定位</string>
    <string name="main_menu_system_gpssetting_mode_lowpower">低功耗定位</string>
    <string name="main_menu_system_gpssetting_mode_local">仅设备定位</string>
    <string name="main_menu_system_gpssetting_modechoosetitle">选择定位模式：</string>
    <string name="main_menu_system_gpssetting_time_intervaltitle">定位时间间隔（秒）：</string>
    <string name="main_menu_system_gpssetting_longitude">经度：</string>
    <string name="main_menu_system_gpssetting_latitude">纬度：</string>
    <string name="main_menu_system_gpssetting_reverse_geocoding">反地理编码：</string>
    <string name="main_menu_system_gpssetting_xdjrecordjw">巡点检是否记录经纬度：</string>
    <string name="setting_head_title_function_fontsize_setting">字体大小设置</string>
    <string name="setting_function_fontsize_setting">设置巡点检相关字体大小</string>
    <string name="temperature_fsl">发射率</string>
    <string name="temperature_fsl_desc">发射率(取值范围0~1之间)</string>
    <string name="temperature_savetype">保存类型</string>
    <string name="temperature_current">当前温度</string>
    <string name="temperature_max">最高温度</string>
    <string name="temperature_min">最低温度</string>
    <string name="vibration_vibrationSetting">测振设置</string>
    <string name="vibrationSetting_vibrationpackage">测量包</string>
    <string name="vibrationSetting_vibrationtype">测量类型</string>
    <string name="vibrationSetting_vibrationpassageway">通道</string>
    <string name="vibrationSetting_maxfreq">最大频率</string>
    <string name="vibrationSetting_samplepoints">采样点数</string>
    <string name="vibrationSetting_windowtype">窗类型</string>
    <string name="vibrationSetting_avgnum">平均次数</string>
    <string name="vibrationSetting_averwrap">重叠率</string>
    <string name="vibrationSetting_bandwidth">冲击带宽</string>
    <string name="bluetooth_device_search_tv_devicename">设备名</string>
    <string name="bluetooth_device_search_tv_is_pair">是否配对</string>
    <string name="bluetooth_device_search_tv_mac_address">MAC地址：</string>
    <string name="bluetooth_device_search_tv_address_str">address</string>
    <string name="bluetooth_setup">蓝牙设置</string>
    <string name="bluetooth_search">蓝牙地址</string>
    <string name="bluetooth_password">配对秘钥</string>
    <string name="plantype_xdj">巡点检</string>
</resources>