<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
	    android:layout="@layout/preference_category" 
	    android:title="@string/setting_head_title_comm">
	    <Preference
		    android:layout="@layout/preference" 
		    android:title="@string/setting_head_title_sys_communicationtype" 
	        android:key="communicationtype" 
	        android:entries="@array/communicationtype_options"    
            android:entryValues="@array/communicationtype_values"
		    android:defaultValue="@string/seting_sys_communicationtype_defaultvalue"
		    android:positiveButtonText="@string/sure"
		    android:negativeButtonText="@string/cancel"/>
	    <Preference
		    android:layout="@layout/preference" 
		    android:title="@string/setting_head_title_sys_plantype" 
	        android:key="plantype" 
	        android:entries="@array/plan_type"    
            android:entryValues="@array/plan_type"
		    android:defaultValue="@string/plantype_xdj"
		    android:positiveButtonText="@string/sure"
		    android:negativeButtonText="@string/cancel"/>
	    <Preference android:layout="@layout/preference" 
	        android:title="@string/setting_head_title_comm_xjqcd" 
	        android:key="xjqCD" 
	        android:summary="@string/setting_comm_xjqcd"
	        android:positiveButtonText="@string/sure"
		    android:negativeButtonText="@string/cancel" />
	    <Preference
	        android:layout="@layout/preference" 
	        android:title="@string/setting_head_title_comm_webaddr"
	        android:key="webServiceAddress"
	        android:summary="@string/setting_comm_webaddr"
	        android:positiveButtonText="@string/sure"
		    android:negativeButtonText="@string/cancel"
	        />
	    <Preference
	        android:layout="@layout/preference" 
	        android:title="@string/setting_head_title_comm_wlan_webaddr"
	        android:key="webServiceAddressForWlan"
	        android:summary="@string/setting_comm_wlan_webaddr"
	        android:positiveButtonText="@string/sure"
		    android:negativeButtonText="@string/cancel"
	        />
	   <Preference
	        android:layout="@layout/preference" 
	        android:title="@string/setting_head_title_comm_other_webaddr"
	        android:key="webServiceAddressForOther"
	        android:summary="@string/setting_comm_other_webaddr"
	        android:positiveButtonText="@string/sure"
		    android:negativeButtonText="@string/cancel"
	        />
    </PreferenceCategory>
    <PreferenceCategory 
	    android:layout="@layout/preference_category" 
	    android:title="@string/setting_head_title_function">
	    <!--  
	    <CheckBoxPreference 
		    android:layout="@layout/preference" 
		    android:title="@string/setting_head_title_function_scroll" 
	        android:key="scroll" 
	        android:summary="@string/setting_function_scroll_off" 
		    android:defaultValue="false"/>
		-->
		<Preference  
	        android:layout="@layout/preference"
	        android:title="@string/setting_head_title_function_show_setting"
	        android:summary="@string/setting_function_show_setting"  
	        android:key="show_settings"
	        android:positiveButtonText="@string/sure"
		    android:negativeButtonText="@string/cancel" >  
	        <intent  
	            android:action="android.intent.action.MAIN"  
	            android:targetPackage="com.moons.xst.track.ui"  
	            android:targetClass="com.moons.xst.track.ui.ShowSettingAty" />  
    	</Preference>
		<CheckBoxPreference 
		    android:layout="@layout/preference" 
		    android:title="@string/setting_head_title_function_voice" 
	        android:key="voice"
	        android:summary="@string/setting_function_voice_on" 
		    android:defaultValue="true"/>
		<CheckBoxPreference 
		    android:layout="@layout/preference" 
		    android:title="@string/setting_head_title_function_inputlastresult" 
	        android:key="lastresult" 
	        android:summaryOn="@string/setting_function_inputlastresult_on"
	        android:summaryOff="@string/setting_function_inputlastresult_off" 
		    android:defaultValue="false"/>
		<CheckBoxPreference 
		    android:layout="@layout/preference" 
		    android:title="@string/setting_head_title_function_checkupdae" 
	        android:key="checkup" 
	        android:summary="@string/setting_function_checkupdate" 
		    android:defaultValue="true"/>
		<CheckBoxPreference 
		    android:layout="@layout/preference" 
		    android:title="@string/setting_head_title_function_uploadfile" 
	        android:key="uploadfile" 
	        android:summary="@string/setting_function_uploadfile" 
		    android:defaultValue="true"/>
		<CheckBoxPreference 
		    android:layout="@layout/preference" 
		    android:title="@string/setting_head_title_function_checkwakelock" 
	        android:key="openWakeLock" 
	        android:summary="@string/setting_head_title_function_closewakelock" 
		    android:defaultValue="true"/>
		<Preference  
	        android:layout="@layout/preference"
	        android:title="@string/setting_head_title_function_jitupload"
	        android:summary="@string/setting_function_function_jitupload"  
	        android:key="jitupload_settings" >  
	        <intent  
	            android:action="android.intent.action.MAIN"  
	            android:targetPackage="com.moons.xst.track.ui"  
	            android:targetClass="com.moons.xst.track.ui.JITUploadAty" />  
    	</Preference>
    	<!--  
		<Preference  
	        android:layout="@layout/preference"
	        android:title="@string/setting_head_title_function_powersave_setting"
	        android:summary="@string/setting_function_powersave_setting"  
	        android:key="powersave_settings" >  
	        <intent  
	            android:action="android.intent.action.MAIN"  
	            android:targetPackage="com.moons.xst.track.ui"  
	            android:targetClass="com.moons.xst.track.ui.PowerSaveSettingAty" />  
    	</Preference>
    	-->
    	<Preference  
	        android:layout="@layout/preference"
	        android:title="@string/setting_head_title_function_gesture_setting"
	        android:summary="@string/setting_function_gesture_setting"  
	        android:key="gesture_settings" >  
	        <intent  
	            android:action="android.intent.action.MAIN"  
	            android:targetPackage="com.moons.xst.track.ui"  
	            android:targetClass="com.moons.xst.track.ui.GestureSettingAty" />  
    	</Preference>
    	<Preference  
	        android:layout="@layout/preference"
	        android:title="@string/setting_head_title_function_fontsize_setting"
	        android:summary="@string/setting_function_fontsize_setting"  
	        android:key="fontsize_settings" >  
	        <intent  
	            android:action="android.intent.action.MAIN"  
	            android:targetPackage="com.moons.xst.track.ui"  
	            android:targetClass="com.moons.xst.track.ui.FontSizeSettingAty" />  
    	</Preference>
    	<Preference  
	        android:layout="@layout/preference"
	        android:title="@string/setting_head_title_function_video_setting"
	        android:summary="@string/setting_function_video_setting"  
	        android:key="video_settings" >  
	        <intent  
	            android:action="android.intent.action.MAIN"  
	            android:targetPackage="com.moons.xst.track.ui"  
	            android:targetClass="com.moons.xst.track.ui.VideoQualitySettingAty" />  
    	</Preference>
    	<Preference 
		    android:layout="@layout/preference" 
		    android:title="@string/setting_head_title_sys_historydatasaveddays_setting" 
	        android:key="hisdatasettings" 
	        android:summary="@string/setting_sys_his_datasaved_default" />
		<Preference 
	        android:layout="@layout/preference" 
	        android:title="@string/setting_head_title_function_clearcache" 
	        android:key="cache" 
	        android:summary="0KB"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category" 
	    android:title="@string/setting_head_title_sys">
		<Preference
		    android:layout="@layout/preference" 
		    android:title="@string/setting_head_title_sys_measuretype" 
	        android:key="measuretype" 
	        android:entries="@array/measuretype_options"    
            android:entryValues="@array/measuretype_values"
		    android:defaultValue="@string/seting_sys_measuretype_defaultvalue"
		    android:positiveButtonText="@string/sure"
		    android:negativeButtonText="@string/cancel"/>
		<Preference
		    android:layout="@layout/preference" 
		    android:title="@string/setting_head_title_sys_updatetimetype" 
	        android:key="updatesysdatetimetype" 
	        android:summary="@string/setting_sys_updatesystime_gps" 
	        android:entries="@array/updatesysdatetime_options"    
            android:entryValues="@array/updatesysdatetime_values"
		    android:defaultValue="@string/setting_sys_updatesystime_defaultvalue"
		    android:positiveButtonText="@string/sure"
		    android:negativeButtonText="@string/cancel"/>
        <Preference 
	        android:layout="@layout/preference" 
	        android:title="@string/setting_head_title_sys_changedate" 
	        android:key="changedate" 
	        android:summary="@string/setting_sys_changedate"/>
        <Preference 
	        android:layout="@layout/preference" 
	        android:title="@string/setting_head_title_sys_changetime" 
	        android:key="changetime" 
	        android:summary="@string/setting_sys_changetime"/>
         <CheckBoxPreference 
		    android:layout="@layout/preference" 
		    android:title="@string/setting_head_title_sys_gps" 
	        android:key="ctrlgps" 
	        android:summary="@string/setting_sys_gps_off" 
		    android:defaultValue="false"/> 
         <Preference 
		    android:layout="@layout/preference" 
		    android:title="@string/setting_head_title_sys_gps_settings" 
	        android:key="gpssettings" 
	        android:summary="@string/setting_sys_gps_settings" />
        
    </PreferenceCategory>
</PreferenceScreen>