<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
	    android:layout="@layout/preference_category" 
	    android:title="@string/vibration_vibrationSetting">
	    <Preference
		    android:layout="@layout/preference" 
		    android:title="@string/vibrationSetting_vibrationtype" 
	        android:key="vibrationpackage" 
	        android:entries="@array/Vibrationpackage_options"    
            android:entryValues="@array/Vibrationpackage_values"
            android:positiveButtonText="@string/sure"
		    android:negativeButtonText="@string/cancel" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:layout="@layout/preference_category" 
	    android:title="@string/bluetooth_setup">
    <Preference  
        android:layout="@layout/preference"
        android:title="@string/bluetooth_search"  
        android:key="bluetooth_settings" >  
        <intent  
            android:action="android.intent.action.MAIN"  
            android:targetPackage="com.moons.xst.track.ui"  
            android:targetClass="com.moons.xst.track.ui.BluetoothDeviceAty" />  
    </Preference> 
    <Preference android:layout="@layout/preference" 
	        android:title="@string/bluetooth_password" 
	        android:key="pwd"
	        android:positiveButtonText="@string/sure"
		    android:negativeButtonText="@string/cancel" />
    </PreferenceCategory>
</PreferenceScreen>