<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/btn_selected"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="vertical"
    android:padding="5dp" >
    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <TextView 
	        android:id="@+id/bluetooth_device_listitem_tv_devicename"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp"
	        android:text="@string/bluetooth_device_search_tv_devicename"
	        android:textSize="@dimen/text_size_20"
	        android:textColor="@color/black" />
	    <TextView 
	        android:id="@+id/bluetooth_device_listitem_tv_ispair"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@id/bluetooth_device_listitem_tv_devicename"
	        android:layout_alignParentRight="true"
	        android:paddingRight="5dp"
	        android:textSize="@dimen/text_size_14"
	        android:text="@string/bluetooth_device_search_tv_is_pair"
	        android:textColor="@color/gray" />
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:textSize="@dimen/text_size_14"
	        android:text="@string/bluetooth_device_search_tv_mac_address"
	        android:textColor="@color/gray" />
	    <TextView 
	        android:id="@+id/bluetooth_device_listitem_tv_marAddress"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/text_size_14"
	        android:text="@string/bluetooth_device_search_tv_address_str"
	        android:textColor="@color/gray" />
	</LinearLayout>

</LinearLayout>
